# python-tonapisdk

./: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: AccStatusChange.md  Account.md  AccountAddress.md  AccountEvent.md  AccountEvents.md  AccountInfoByStateInit.md  AccountStaking.md  AccountStakingInfo.md  AccountStatus.md  AccountStorageInfo.md  Accounts.md  AccountsApi.md  Action.md  ActionPhase.md  ActionSimplePreview.md  ApyHistory.md  Auction.md  AuctionBidAction.md  Auctions.md  BlockRaw.md  BlockchainApi.md  BlockchainBlock.md  BlockchainConfig.md  BlockchainRawAccount.md  BouncePhaseType.md  ComputePhase.md  ComputeSkipReason.md  ConnectApi.md  ContractDeployAction.md  CreditPhase.md  DNSApi.md  DepositStakeAction.md  DnsExpiring.md  DnsExpiringItemsInner.md  DnsRecord.md  DomainBid.md  DomainBids.md  DomainInfo.md  DomainNames.md  EmulateMessageToEventRequest.md  (+109 more)
fdtapi/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test/: test_acc_status_change.py  test_account.py  test_account_address.py  test_account_event.py  test_account_events.py  test_account_info_by_state_init.py  test_account_staking.py  test_account_staking_info.py  test_account_status.py  test_account_storage_info.py  test_accounts.py  test_accounts_api.py  test_action.py  test_action_phase.py  test_action_simple_preview.py  test_apy_history.py  test_auction.py  test_auction_bid_action.py  test_auctions.py  test_block_raw.py  test_blockchain_api.py  test_blockchain_block.py  test_blockchain_config.py  (+126 more)
(+152 files in other folders)
